--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -74,8 +74,9 @@
 
 /* ++++++++++ Start of Hero Component style sheet ++++++++++ */
 .hero-container {
-  width: 100%;
-  height: 85vh;
+  width: 100vw;
+  height: 100vh;
+  padding:0 8rem ;
 
   background: linear-gradient(
     360deg,
@@ -86,36 +87,44 @@
     h1 {
       @include yoga;
       font-weight: 300;
-      font-size: 19rem;
+      font-size: 18rem;
       color: rgba(29, 28, 26, 0.805);
       position: absolute;
-      left: 46rem;
-      top: 3rem;
+      left: 15rem;
+      top: 8rem;
       z-index: 2;
     }
-    .name {
-      top: 23rem;
-      left: 46rem;
+    h2 {
+      @include logo-font-style;
+      font-family: "MoonDance-Regular";
+      font-size: 4.5rem; top: 26rem;
+      left: 18rem;
       position: absolute;
+
     }
+    
   }
   .ball {
-    width: 56rem;
-    height: 56rem;
-    background-color: rgb(215, 167, 39);
+    width: 40rem;
+    height: 40rem;
+    background-color: #b68a23;
     border-radius: 50%;
+    border: #e4e4e48d 2rem solid;
     position: relative;
-    left: 80rem;
+    left: 55rem;
+    top:6rem;
 
     .gif {
       width: 110rem;
       height: 70rem;
       position: absolute;
-      left: -35rem;
-      bottom: 1rem;
+      right: -22rem;
+      bottom: -5rem;
     }
   }
+  
 }
+
 /* ++++++++++ End of Hero Component style sheet ++++++++++ */
 
 /* ++++++++++ Start of Aboutme Component style sheet ++++++++++ */
