--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -8,6 +8,54 @@
 
     /*----- Start of Hero component media query----- */
     .hero-container {
+      width: 100vw;
+      height: 100vh;
+      padding:0 8rem ;
+    
+      background: linear-gradient(
+        360deg,
+        rgba(255, 255, 255, 0) 50%,
+        rgba(209, 204, 204, 0.445) 50%
+      );
+      .hero-heading {
+        h1 {
+          @include yoga;
+          font-weight: 300;
+          font-size: 1rem;
+          color: rgba(29, 28, 26, 0.805);
+          position: absolute;
+          left: 13rem;
+          top: 8rem;
+          z-index: 2;
+        }
+        h2 {
+          @include logo-font-style;
+          font-family: "MoonDance-Regular";
+          font-size: 4.5rem; top: 28rem;
+          left: 18rem;
+          position: absolute;
+    
+        }
+        
+      }
+      .ball {
+        width: 10rem;
+        height: 10rem;
+        background-color: #b68a23;
+        border-radius: 50%;
+        border: #e4e4e48d 2rem solid;
+        position: relative;
+        left: 40rem;
+        top:6rem;
+    
+        .gif {
+          width: 92rem;
+          height: 60rem;
+          position: absolute;
+          right: -22rem;
+          bottom: -5rem;
+        }
+      }
     }
     /*----- End of Hero component media query----- */
 
@@ -58,6 +106,44 @@
 
     /*----- Start of Hero component media query----- */
     .hero-container {
+      width: 100%;
+      height: 100vh;
+/*       padding:0 1rem ;
+ */    
+      
+      .hero-heading {
+        h1 {
+          font-size: 10px;
+        
+        }
+        h2 {
+          @include logo-font-style;
+          font-family: "MoonDance-Regular";
+          font-size: 4.5rem; top: 28rem;
+          left: 18rem;
+          position: absolute;
+    
+        }
+        
+      }
+      .ball {
+        width: 1rem;
+        height: 1rem;
+        background-color: #b68a23;
+        border-radius: 50%;
+        border: #e4e4e48d 2rem solid;
+        position: relative;
+        left: 40rem;
+        top:6rem;
+    
+        .gif {
+          width: 92rem;
+          height: 60rem;
+          position: absolute;
+          right: -22rem;
+          bottom: -5rem;
+        }
+      }
     }
     /*----- End of Hero component media query----- */
 
@@ -107,15 +193,102 @@
     /*----- End of Navbar component media query----- */
 
     /*----- Start of Hero component media query----- */
-    .hero-container {.ball{
-      position: relative;
-      left:35rem
-    }
-    .hero{
+    .hero-container {width: 100vw;
       height: 100vh;
-      width: 100%;
-      background: linear-gradient(360deg, rgba(255,255,255,0) 39%,  rgba(209, 204, 204, 0.445) 39%);
-    }
+      padding:0 8rem ;
+    
+      background: linear-gradient(
+        360deg,
+        rgba(255, 255, 255, 0) 50%,
+        rgba(209, 204, 204, 0.445) 50%
+      );
+      .hero-heading {
+        h1 {
+          @include yoga;
+          .hero-container { width: 100vw;
+            height: 100vh;
+            padding:0 8rem ;
+          
+            background: linear-gradient(
+              360deg,
+              rgba(255, 255, 255, 0) 50%,
+              rgba(209, 204, 204, 0.445) 50%
+            );
+            .hero-heading {
+              h1 {
+                @include yoga;
+                font-weight: 300;
+                font-size: 16rem;
+                color: rgba(29, 28, 26, 0.805);
+                position: absolute;
+                left: 13rem;
+                top: 8rem;
+                z-index: 2;
+              }
+              h2 {
+                @include logo-font-style;
+                font-family: "MoonDance-Regular";
+                font-size: 4.5rem; top: 28rem;
+                left: 18rem;
+                position: absolute;
+          
+              }
+              
+            }
+            .ball {
+              width: 35rem;
+              height: 35rem;
+              background-color: #b68a23;
+              border-radius: 50%;
+              border: #e4e4e48d 2rem solid;
+              position: relative;
+              left: 40rem;
+              top:6rem;
+          
+              .gif {
+                width: 92rem;
+                height: 60rem;
+                position: absolute;
+                right: -22rem;
+                bottom: -5rem;
+              }
+            }
+          }
+          font-size: .5rem;
+          color: rgba(29, 28, 26, 0.805);
+          position: absolute;
+          left: 13rem;
+          top: 8rem;
+          z-index: 2;
+        }
+        h2 {
+          @include logo-font-style;
+          font-family: "MoonDance-Regular";
+          font-size: 4.5rem; top: 28rem;
+          left: 18rem;
+          position: absolute;
+    
+        }
+        
+      }
+      .ball {
+        width: 35rem;
+        height: 35rem;
+        background-color: #b68a23;
+        border-radius: 50%;
+        border: #e4e4e48d 2rem solid;
+        position: relative;
+        left: 40rem;
+        top:6rem;
+    
+        .gif {
+          width: 92rem;
+          height: 60rem;
+          position: absolute;
+          right: -22rem;
+          bottom: -5rem;
+        }
+      }
     }
     /*----- End of Hero component media query----- */
 
@@ -166,6 +339,54 @@
 
     /*----- Start of Hero component media query----- */
     .hero-container {
+      width: 100vw;
+      height: 100vh;
+      padding:0 8rem ;
+    
+      background: linear-gradient(
+        360deg,
+        rgba(255, 255, 255, 0) 50%,
+        rgba(209, 204, 204, 0.445) 50%
+      );
+      .hero-heading {
+        h1 {
+          @include yoga;
+          font-weight: 300;
+          font-size: 10rem;
+          color: rgba(29, 28, 26, 0.805);
+          position: absolute;
+          left: 13rem;
+          top: 8rem;
+          z-index: 2;
+        }
+        h2 {
+          @include logo-font-style;
+          font-family: "MoonDance-Regular";
+          font-size: 4.5rem; top: 28rem;
+          left: 18rem;
+          position: absolute;
+    
+        }
+        
+      }
+      .ball {
+        width: 35rem;
+        height: 35rem;
+        background-color: #b68a23;
+        border-radius: 50%;
+        border: #e4e4e48d 2rem solid;
+        position: relative;
+        left: 40rem;
+        top:6rem;
+    
+        .gif {
+          width: 92rem;
+          height: 60rem;
+          position: absolute;
+          right: -22rem;
+          bottom: -5rem;
+        }
+      }
     }
     /*----- End of Hero component media query----- */
 
@@ -215,9 +436,9 @@
     /*----- End of Navbar component media query----- */
 
     /*----- Start of Hero component media query----- */
-    .hero-container {  width: 100%;
+    .hero-container {  width: 100vw;
       height: 100vh;
-      padding:0 5rem ;
+      padding:0 8rem ;
     
       background: linear-gradient(
         360deg,
@@ -228,31 +449,35 @@
         h1 {
           @include yoga;
           font-weight: 300;
-          font-size: 10rem;
+          font-size: 12rem;
           color: rgba(29, 28, 26, 0.805);
           position: absolute;
-          left: 10rem;
+          left: 13rem;
           top: 8rem;
           z-index: 2;
         }
-        .name {
-          top: 22rem;
-          left: 10rem;
+        h2 {
+          @include logo-font-style;
+          font-family: "MoonDance-Regular";
+          font-size: 4.5rem; top: 28rem;
+          left: 18rem;
           position: absolute;
+    
         }
+        
       }
       .ball {
-        width:25rem;
-        height:25rem;
+        width: 35rem;
+        height: 35rem;
         background-color: #b68a23;
         border-radius: 50%;
         border: #e4e4e48d 2rem solid;
         position: relative;
-        left: 30rem;
-        top:8rem;
+        left: 40rem;
+        top:6rem;
     
         .gif {
-          width: 100rem;
+          width: 92rem;
           height: 60rem;
           position: absolute;
           right: -22rem;
@@ -308,7 +533,7 @@
     /*----- End of Navbar component media query----- */
 
     /*----- Start of Hero component media query----- */
-    .hero-container { width: 100%;
+    .hero-container { width: 100vw;
       height: 100vh;
       padding:0 8rem ;
     
@@ -321,32 +546,36 @@
         h1 {
           @include yoga;
           font-weight: 300;
-          font-size: 15rem;
+          font-size: 12rem;
           color: rgba(29, 28, 26, 0.805);
           position: absolute;
-          left: 10rem;
+          left: 13rem;
           top: 8rem;
           z-index: 2;
         }
-        .name {
-          top: 22rem;
-          left: 10rem;
+        h2 {
+          @include logo-font-style;
+          font-family: "MoonDance-Regular";
+          font-size: 4.5rem; top: 28rem;
+          left: 18rem;
           position: absolute;
+    
         }
+        
       }
       .ball {
-        width: 30rem;
-        height: 30rem;
+        width: 35rem;
+        height: 35rem;
         background-color: #b68a23;
         border-radius: 50%;
         border: #e4e4e48d 2rem solid;
         position: relative;
-        left: 30rem;
-        top:8rem;
+        left: 40rem;
+        top:6rem;
     
         .gif {
-          width: 70rem;
-          height: 40rem;
+          width: 92rem;
+          height: 60rem;
           position: absolute;
           right: -22rem;
           bottom: -5rem;
@@ -401,7 +630,54 @@
     /*----- End of Navbar component media query----- */
 
     /*----- Start of Hero component media query----- */
-    .hero-container {
+    .hero-container { width: 100vw;
+      height: 100vh;
+      padding:0 8rem ;
+    
+      background: linear-gradient(
+        360deg,
+        rgba(255, 255, 255, 0) 50%,
+        rgba(209, 204, 204, 0.445) 50%
+      );
+      .hero-heading {
+        h1 {
+          @include yoga;
+          font-weight: 300;
+          font-size: 16rem;
+          color: rgba(29, 28, 26, 0.805);
+          position: absolute;
+          left: 13rem;
+          top: 8rem;
+          z-index: 2;
+        }
+        h2 {
+          @include logo-font-style;
+          font-family: "MoonDance-Regular";
+          font-size: 4.5rem; top: 28rem;
+          left: 18rem;
+          position: absolute;
+    
+        }
+        
+      }
+      .ball {
+        width: 35rem;
+        height: 35rem;
+        background-color: #b68a23;
+        border-radius: 50%;
+        border: #e4e4e48d 2rem solid;
+        position: relative;
+        left: 40rem;
+        top:6rem;
+    
+        .gif {
+          width: 92rem;
+          height: 60rem;
+          position: absolute;
+          right: -22rem;
+          bottom: -5rem;
+        }
+      }
     }
     /*----- End of Hero component media query----- */
 
