--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -138,7 +138,7 @@
     position: absolute;
     top: 0;
     left: 10rem;
-    width: 530px;
+    width: 500px;
     height: 730px;
     transform: rotate(-13deg);
     z-index: -1;
@@ -167,18 +167,20 @@
     flex: 1;
     gap: 2rem;
     flex-direction: column;
+    align-items: center;
     padding-top: 1rem;
     max-width: 50vw;
     /*    margin-top: 2rem; */
 
     h2 {
       @include heading-2-style;
+      text-align: center;
     }
     p {
       color: $text-color;
       font-family: "Roboto-Medium";
       font-size: 1.5rem;
-      max-width: 70%;
+      max-width: 80%;
     }
   }
 }
