--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -13,6 +13,31 @@
 
     /*----- Start of Aboutme component media query----- */
     .about-container {
+      flex-wrap: wrap;
+      .rectangle1,
+      .rectangle2 {
+        display: none;
+      }
+      .about-image {
+        width: 150px;
+        height: 200px;
+      }
+      section {
+        align-items: center;
+        gap: 0;
+        margin: 0;
+        padding-top: 0;
+        max-width: 100%;
+        p {
+          font-size: 16px;
+          max-width: 100%;
+        }
+      }
+      h2 {
+        font-size: 16px;
+
+        padding: 0;
+      }
     }
     /*----- End of Aboutme component media query----- */
 
@@ -63,6 +88,33 @@
 
     /*----- Start of Aboutme component media query----- */
     .about-container {
+      flex-wrap: wrap;
+      flex: 1;
+
+      .about-image {
+        width: 400px;
+        height: 600px;
+      }
+      .rectangle1,
+      .rectangle2 {
+        display: none;
+      }
+
+      section {
+        align-items: center;
+
+        gap: 0;
+        padding-top: 0;
+        max-width: 100%;
+        p {
+          max-width: 100%;
+        }
+      }
+      h2 {
+        font-size: 18px;
+
+        padding: 1rem;
+      }
     }
     /*----- End of Aboutme component media query----- */
 
@@ -113,6 +165,23 @@
 
     /*----- Start of Aboutme component media query----- */
     .about-container {
+      flex-wrap: wrap;
+
+      section {
+        align-items: center;
+        gap: 0;
+        padding-top: 0;
+        max-width: 100%;
+        margin: 2px;
+        p {
+          font-size: 16px;
+          max-width: 100%;
+        }
+        h2 {
+
+          font-size: 20px;
+        }
+      }
     }
     /*----- End of Aboutme component media query----- */
 
@@ -163,6 +232,19 @@
 
     /*----- Start of Aboutme component media query----- */
     .about-container {
+      .about-image {
+        width: 400px;
+        height: 600px;
+      }
+      gap: 3rem;
+      .rectangle1,
+      .rectangle2 {
+        width: 400px;
+        height: 600px;
+      }
+     h1{
+      font-size: 22px;
+     }
     }
     /*----- End of Aboutme component media query----- */
 
@@ -213,6 +295,13 @@
 
     /*----- Start of Aboutme component media query----- */
     .about-container {
+      p {
+        max-width: 100%;
+      }
+      h2 {
+        padding: 1rem;
+        font-size: 2rem;
+      }
     }
     /*----- End of Aboutme component media query----- */
 
