--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -113,7 +113,7 @@
       
       .hero-heading {
         h1 {
-          font-size: 10px;
+          font-size: 50%;
         
         }
         h2 {
