--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -228,7 +228,8 @@
 
     /*----- Start of Feedback component media query----- */
     .feedback-container {
-    }
+      .site-container{}
+}
     /*----- End of Feedback component media query----- */
 
     /*----- Start of Demo component media query----- */
@@ -328,7 +329,8 @@
 
     /*----- Start of Feedback component media query----- */
     .feedback-container {
-    }
+      
+}
     /*----- End of Feedback component media query----- */
 
     /*----- Start of Demo component media query----- */
