--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -74,9 +74,9 @@
 
 /* ++++++++++ Start of Hero Component style sheet ++++++++++ */
 .hero-container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  padding:0 8rem ;
+  padding: 0 8rem;
 
   background: linear-gradient(
     360deg,
@@ -97,12 +97,11 @@
     h2 {
       @include logo-font-style;
       font-family: "MoonDance-Regular";
-      font-size: 4.5rem; top: 28rem;
+      font-size: 4.5rem;
+      top: 28rem;
       left: 18rem;
       position: absolute;
-
     }
-    
   }
   .ball {
     width: 38rem;
@@ -112,7 +111,7 @@
     border: #e4e4e48d 2rem solid;
     position: relative;
     left: 50rem;
-    top:6rem;
+    top: 6rem;
 
     .gif {
       width: 110rem;
@@ -122,7 +121,6 @@
       bottom: -5rem;
     }
   }
-  
 }
 
 /* ++++++++++ End of Hero Component style sheet ++++++++++ */
@@ -505,27 +503,33 @@
   @include section-padding-style;
   border: 1px solid green;
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
 
-  .form-container {
-    h2 {
-      @include heading-2-style;
-    }
+  .contact-sub-container {
+    display: flex;
 
-    h3 {
-      @include heading-3;
-      margin-bottom: 1.5rem;
-    }
+    .form-container {
+      h2 {
+        @include heading-2-style;
+        text-align: center;
+        padding: 2rem;
+      }
 
-    .submit-btn {
-      @include button-style;
+      h3 {
+        @include heading-3;
+        text-align: center;
+      }
+
+      .submit-btn {
+        @include button-style;
+      }
     }
-  }
-  .contact-img {
-    img {
-      width: 30rem;
-      margin-right: 5rem;
+    .contact-img {
+      img {
+        width: 30rem;
+      }
     }
   }
 }
