--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -92,8 +92,9 @@
       flex: 1;
 
       .about-image {
-        width: 400px;
-        height: 600px;
+        width: 200px;
+        height: 400px;
+        border: 10px solid #b488213e;
       }
       .rectangle1,
       .rectangle2 {
